--- a/test-packages/demo-ember-app/app/components/foo.hbs
+++ b/test-packages/demo-ember-app/app/components/foo.hbs
@@ -14,6 +14,20 @@
 
 <Qux />
 
+<EmberComponent />
+
+<EmberComponent @required="req" />
+
+<EmberComponent @required={{1}} />
+
+<EmberComponent @required="req" @optional={{1}} />
+
+<EmberComponent @required="req" @optional="opt" />
+
+<EmberComponent @required="req" @hasDefault="override" />
+
+<EmberComponent @required="req" @hasDefault={{false}} />
+
 {{repeat "foo" 3}}
 
 {{repeat "foo"}}
