Include @wagenet's yielded component exercise

--- a/test-packages/ts-ember-app/app/components/ember-component.hbs
+++ b/test-packages/ts-ember-app/app/components/ember-component.hbs
@@ -1,7 +1,9 @@
-{{this.required}}
-{{this.optional}}
-{{this.hasDefault}}
+<div ...attributes>
+  {{this.required}}
+  {{this.optional}}
+  {{this.hasDefault}}
 
-{{@required}}
-{{@optional}}
-{{@hasDefault}}
+  {{@required}}
+  {{@optional}}
+  {{@hasDefault}}
+</div>
