Exercise functions as helpers in `ts-ember-app`

--- a/test-packages/ts-ember-app/app/components/ember-component.hbs
+++ b/test-packages/ts-ember-app/app/components/ember-component.hbs
@@ -7,3 +7,13 @@
   {{@optional}}
   {{@hasDefault}}
 </div>
+
+{{#if this.showFunctionHelpers}}
+  {{! @glint-expect-error: missing arg }}
+  {{this.isLongString}}
+
+  {{! @glint-expect-error: wrong arg type }}
+  {{this.isLongString 123}}
+
+  {{this.isLongString 'hi'}}
+{{/if}}
