Update test packages to exercise nullable invocation

--- a/test-packages/ts-ember-app/app/components/foo.hbs
+++ b/test-packages/ts-ember-app/app/components/foo.hbs
@@ -22,6 +22,11 @@
 
 <Qux />
 
+<this.MaybeComponent @arg="hi" />
+
+{{! @glint-expect-error: missing required arg }}
+<this.MaybeComponent />
+
 {{! @glint-expect-error: missing required arg }}
 <EmberComponent />
 
