Introduce a test package using stable/preview types
This package intentionally does *not* have any of the runtime config or
dependencies; it only needs `ember-source` and the Glint packages to be
able to verify that type checking works correctly using the types
published as part of the `ember-source` package. An annoying exception:
we include the ESLint deps since we run ESLint from the root. We might
be able to fix that in the future, but for now this unblocks things.

This package also includes a check to make sure that this test package
is *not* accidentally (read: via incorrect dependency hoisting) getting
the DT types.

--- a/test-packages/ts-ember-preview-types/app/components/ember-component.hbs
+++ b/test-packages/ts-ember-preview-types/app/components/ember-component.hbs
@@ -8,8 +8,8 @@
   {{@hasDefault}}
 
   {{!--
-    This pair of checks needs to work in this app, which uses DT types, and the
-    preview/stable types app which does *not*.
+    This pair of checks needs to work in this app, which uses the preview/stable
+    types, and the ts-ember-app types app which uses legacy DT types.
   --}}
   {{get this "required"}}
 
