--- a/test-packages/ts-ember-app/app/components/foo.hbs
+++ b/test-packages/ts-ember-app/app/components/foo.hbs
@@ -30,7 +30,7 @@
 {{! @glint-expect-error: missing required arg }}
 <EmberComponent />
 
-<EmberComponent @required="req" />
+<EmberComponent  />
 
 <EmberComponent
   {{! @glint-expect-error: bad type for `required` }}
